--- a/certificate.html
+++ b/certificate.html
@@ -8,6 +8,10 @@
         img{
             box-shadow: -10px -10px 80px;
             border-radius: 15px;
+            transition: transform 0.3s,box-shadow 0.3s;
+        }
+        img:hover{
+            transform:translateY(10px);
         }
         body{
             background-color: antiquewhite;
@@ -15,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>"#THIS IS THE CERTIFICATE FOR PARTICIPATING IN BLOOD DONATION CAMP:"</h1>
+    <h1><marquee>"#THIS IS THE CERTIFICATE FOR PARTICIPATING IN BLOOD DONATION CAMP:"</marquee></h1>
     <figure>
         <center>
         <img src="certificate format.jpg  " width="700px">
