--- a/registration.html
+++ b/registration.html
@@ -103,7 +103,8 @@
             }
         }
     </script>
-        <form onsubmit="return data()" action="paragraph.html">
+        <form onsubmit="return data()" action="index.html">
+            
         <h1 id="rh1"><marquee><i>Registration Form For Blood Donation :</i></marquee></h1>
         <fieldset>
             <legend><h1>Form</h1></legend>
